@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-06-17T01:44:09Z",
-  "count" : 120,
+  "timestamp" : "2025-06-30T01:49:35Z",
+  "count" : 53,
   "count_minmax" : [ 18, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "count_decinc" : [ -67, +120 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
