@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-06-30T01:49:35Z",
-  "count" : 123,
-  "count_minmax" : [ 12, 123 ],
-  "count_decinc" : [ -0, +123 ],
+  "count" : 16,
+  "count_minmax" : [ 16, 16 ],
+  "count_decinc" : [ -0, +16 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
